--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     body { font-family: 'Arial', sans-serif; background: #111; color: #fff; line-height: 1.6; }
     #particles-js { position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1; }
 
-    /* NAVBAR */
+
     nav {
       background: #000000;
       padding: 15px 5%;
@@ -52,7 +52,7 @@
     nav ul li a.active { color: #ffffff; }
     nav ul li a.active::after { width: 100%; opacity: 1; transform: translateY(0); }
 
-    /* BUTTONS */
+
     .buttons { margin-top: 10px; text-align: right; }
     .btn {
       display: inline-block;
@@ -66,7 +66,7 @@
     }
     .btn:hover { background: #0055aa; }
 
-    /* HEADER */
+
     header {
       text-align: center;
       padding: 60px 10px;
@@ -76,24 +76,23 @@
     header p { font-size: 1rem; color: #eee; }
     header img { max-width: 80%; height: auto; margin: auto; display: block; }
 
-    /* SECTIONS */
+
     section { padding: 50px 10px; }
     section h2 { text-align: center; margin-bottom: 30px; font-size: 2rem; }
     .container { max-width: 1000px; margin: auto; padding: 0 10px; }
 
-    /* GRID */
+
     #skills-list, .projects-container, .experience-container {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 20px;
     }
 
-    /* SKILLS */
-    .skill-item h3 { margin-bottom: 8px; }
-    .skill-bar { background: #333; border-radius: 5px; overflow: hidden; }
-    .skill-fill { background: #4CAF50; height: 20px; width: 0; transition: width 1s ease-in-out; }
 
-    /* PROJECTS & EXPERIENCE */
+    .skill-item h3 { margin-bottom: 8px; }
+
+
+
     .project, .exp {
       background: rgba(255,255,255,0.05);
       padding: 15px;
@@ -101,11 +100,11 @@
     }
     .project img { width: 100%; height: auto; object-fit: contain; border-radius: 10px; margin-bottom: 10px; }
 
-    /* FOOTER */
+
     footer { background: #222; text-align: center; padding: 20px 10px; }
     footer a { color: #4CAF50; margin: 0 5px; text-decoration: none; }
 
-    /* MEDIA QUERY MOBILE */
+
     @media (max-width: 768px) {
       nav ul { flex-direction: column; gap: 10px; margin-left: 0; text-align: center; }
       header h1 { font-size: 1.8rem; }
@@ -268,31 +267,27 @@
       loop: true
     });
 
-    const skills = [
-      { name: "HTML", level: "90%" },
-      { name: "CSS", level: "85%" },
-      { name: "JavaScript", level: "80%" },
-      { name: "Python", level: "85%" },
-      { name: "UI/UX(Figma)", level: "80%" },
-      { name: "Machine Learning", level: "75%" },
-      { name: "Ms.word", level: "90%" },
-      { name: "Ms.Exel", level: "90%" },
-      { name: "Ms.Power Point", level: "90%" },
-      { name: "Canva", level: "90%" }
-    ];
+  const skills = [
+  { name: "Bahasa English" },
+  { name: "Bahasa Indonesia" },
+  { name: "JavaScript" },
+  { name: "Python" },
+  { name: "UI/UX (Figma)" },
+  { name: "CSS" },
+  { name: "Ms. Word" },
+  { name: "Ms. Excel" },
+  { name: "Ms. Power Point" },
+  { name: "Canva" }
+];
 
-    const skillsList = document.getElementById('skills-list');
-    skills.forEach(skill => {
-      const skillItem = document.createElement('div');
-      skillItem.classList.add('skill-item');
-      skillItem.innerHTML = `
-        <h3>${skill.name}</h3>
-        <div class="skill-bar">
-          <div class="skill-fill" style="width: ${skill.level};"></div>
-        </div>
-      `;
-      skillsList.appendChild(skillItem);
-    });
+const skillsList = document.getElementById('skills-list');
+skills.forEach(skill => {
+  const skillItem = document.createElement('div');
+  skillItem.classList.add('skill-item');
+  skillItem.innerHTML = `<h3>${skill.name}</h3>`;
+  skillsList.appendChild(skillItem);
+});
+
 
     ScrollReveal().reveal('header', { delay: 200, distance: '50px', origin: 'top', duration: 1000 });
     ScrollReveal().reveal('#about .container', { delay: 250, distance: '50px', origin: 'left', duration: 1000 });
