--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: 'Arial', sans-serif; background: #111; color: #fff; line-height: 1.6; }
+    body { font-family: 'Arial', sans-serif; background: #111; color: #ffffff; line-height: 1.6; }
     #particles-js { position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1; }
 
 
@@ -48,7 +48,7 @@
       transition: width 0.4s ease, opacity 0.4s ease, transform 0.4s ease;
     }
     nav ul li a:hover::after { width: 100%; opacity: 1; transform: translateY(0); }
-    nav ul li a:hover { color: #fff; }
+    nav ul li a:hover { color: #ffffff; }
     nav ul li a.active { color: #ffffff; }
     nav ul li a.active::after { width: 100%; opacity: 1; transform: translateY(0); }
 
@@ -90,6 +90,17 @@
 
 
     .skill-item h3 { margin-bottom: 8px; }
+.project {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; 
+  height: 100%; 
+}
+
+.project .buttons {
+  margin-top: auto; 
+  text-align: center; 
+}
 
 
 
@@ -171,7 +182,7 @@
         </div>
 
         <div class="project">
-          <img src="image/depositphotos_516614530-stock-photo-phytoplasma-virus-virus-diseases-vines.jpg" alt="Deteksi Penyakit Tanaman">
+          <img src="image/imagedepositphotos_516614530-stock-photo-phytoplasma-virus-virus-diseases-vines.png" alt="Deteksi Penyakit Tanaman">
           <h3>Deteksi Penyakit Tanaman</h3>
           <p>Membangun model AI berbasis computer vision untuk mendeteksi penyakit pada tanaman, membantu petani dalam pengambilan keputusan lebih cepat dan tepat.</p>
           <div class="buttons">
@@ -220,7 +231,7 @@
           <h3>Ui/Ux dari aplikasi Lapakku</h3>
           <p>Sebuah Tampilan Ui/Ux dari aplikasi Lapakku yaitu Aplikasi untuk Menganalisa Keuntuntungan serta pemasukan dan stock barang dari UMKM.</p>
           <div class="buttons">
-            <a href="MYproject/Lapakku.fig" download class="btn">Download Code</a>
+            <a href="MYproject/Lapakku.fig" download class="btn">Download </a>
           </div>
         </div>
 
@@ -248,9 +259,9 @@
     <p>© 2025 Verril Indrianto</p>
     <p>
       <a href="https://mail.google.com/mail/?view=cm&to=verrilindrianto@gmail.com" target="_blank"><i class="fa fa-envelope"></i> Email</a>
-      <a href="https://wa.me/6285719700253"><i class="fa fa-whatsapp"></i> WhatsApp</a>
-      <a href="https://www.linkedin.com/in/verril-indrianto-99aa2b362" target="_blank"><i class="fa fa-linkedin"></i> LinkedIn</a>
-      <a href="https://github.com/verril-svg"><i class="fa fa-github"></i> GitHub</a>
+      <a href="https://wa.me/6285719700253"><i class="fab fa-whatsapp"></i> WhatsApp</a>
+      <a href="https://www.linkedin.com/in/verril-indrianto-99aa2b362" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
+      <a href="https://github.com/verril-svg"><i class="fab fa-github"></i> GitHub</a>
     </p>
   </footer>
 
