--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
     .project img {
       width: 100%;
       height: 200px;
-      object-fit: cover;
+      object-fit: contain; /* Ganti 'cover' menjadi 'contain' */
       border-radius: 10px;
       margin-bottom: 15px;
     }
